byte-code-compiler/test_files/typing/bad/testfile-arith-1.psc
class S { int_32 a; };
int_32 main() { S s; s+s; }
